# NASTYvst

./: .gitignore  DEV_RULES.md  NastyOrb_Plugin_Op_List.md  QC_Rack_Audit.docx  RESEARCH_TARGETS.md  STATUS.md  Shags_VST_Full_Audit.docx  build_audit_doc.cjs  build_echoformlite_audit.cjs  build_fdnhall_audit.cjs  build_filterfx_audit.cjs  build_lofilight_audit.cjs  build_modduck_audit.cjs  build_qc_audit.cjs  build_qc_audit.js  build_qc_audit_doc.js  build_qc_rack_audit.cjs  build_qc_rack_audit_session_20260423.cjs  build_qc_rack_audit_v2.cjs  build_qc_rack_audit_v3.cjs  build_sandboxtoy_audit.cjs  build_toycomp_audit.cjs  dafx_by_category.md  dafx_categorized.md  index.html  nastyBeast.html  package-lock.json  package.json  panther.html  rack.html  reactiveTest.html  vite.config.js
.claude/: settings.local.json
.githooks/: README.md  pre-commit
Sandbox_Audits/: EchoformLite_Audit.docx  FdnHall_Audit.docx  FilterFX_Audit.docx  LofiLight_Audit.docx  ModDuck_Audit.docx  SandboxToy_Audit.docx  ToyComp_Audit.docx
docs/: CONFORMANCE_SPEC_TEMPLATE.md  UI_ISOLATION_RULES.md
memory/: DEFERRED_synthesis_instrument_engine.md  STEP10_reverb_family_plan.md  STEP11_smear_port.md  STEP12_morph_reverb.md  STEP13_gravity.md  STEP14_orbit.md  STEP15_plateX.md  STEP16_reverbBus.md  STEP17_nearFar.md  STEP18_dynamics_family.md  STEP19_limiter.md  STEP20_distortion_family.md  STEP21_eq_module.md  STEP22_refinement_pass.md  STEP23_panther_buss.md  STEP24_control_layer_policy.md  STEP25_transparency_qc_rule.md  STEP4B_AUDIT_existing_plugins.md  STEP4_unified_plugin_architecture.md  STEP5_delay_module.md  STEP6_echoform_port.md  STEP7_echoform_validation_and_tapedelay_port.md  STEP8_tape_character.md  STEP9_drift_playbox_ports.md  airwindows_incorporation_plan.md  cordell_audio_power_amplifiers.md  dafx_delay_batch1.md  dafx_delay_batch2.md  dafx_distortion_batch1.md  dafx_distortion_batch2.md  dafx_distortion_batch3.md  dafx_distortion_batch4.md  dafx_dynamics_batch1.md  dafx_modulation_batch1.md  dafx_spatial_batch1.md  emi_tg12345_console.md  ml_training_methodology.md  mullard_circuits_for_audio_amplifiers_1963.md  op_primaries_followup_2026-04-26.md  op_primaries_followup_results.md  (+19 more)
milestones/2026-04-24_phase0_jucehello/: README.md
milestones/2026-04-24_phase0_jucehello/source/: CMakeLists.txt
milestones/2026-04-24_phase0_jucehello/source/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
milestones/2026-04-25_phase1_codegen/: README.md
milestones/2026-04-25_phase1_codegen/source/smoke-gain-chain-v0/: CMakeLists.txt
milestones/2026-04-25_phase1_codegen/source/smoke-gain-chain-v0/src/: MasterGraph.cpp  MasterGraph.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
milestones/2026-04-25_phase1_codegen/source/smoke-gain-chain-v0/src/ops/: op_n_gain_a.h  op_n_gain_b.h
milestones/2026-04-25_phase1_codegen/source/smoke-gain-v0/: CMakeLists.txt
milestones/2026-04-25_phase1_codegen/source/smoke-gain-v0/src/: MasterGraph.cpp  MasterGraph.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
milestones/2026-04-25_phase1_codegen/source/smoke-gain-v0/src/ops/: op_n_gain.h
milestones/2026-04-25_phase2_parity/: README.md
milestones/2026-04-25_phase3_tierA1/: README.md
public/: parity-report.json  pitchShifterProcessor.js  pvProcessor.js  verification_ledger.json
scripts/: audit-raw.txt  audit_op_progress.mjs  build-full-audit.js  build-panther.js  build-qc-audit.js  build-qc-rack-audit.js  build-suite-migration.js  build_qc_audit_docx.cjs  build_qc_audit_docx.mjs  build_qc_rack_audit.cjs  build_qc_rack_audit.mjs  build_qc_rack_audit_session.cjs  build_qc_rack_audit_session.mjs  build_qc_rack_session_audit.mjs  build_qc_rack_session_audit_v2.cjs  check-worklet-syntax.js  check_all_graphs_deep.mjs  check_behavioral.mjs  check_master_emit_parity.mjs  check_master_worklet.mjs  check_ml_inference.mjs  check_native_parity.mjs  check_op_goldens.mjs  check_op_math.mjs  check_pcof.mjs  check_recipe_behavioral.mjs  check_schema_v1.mjs  check_stereo_isolation.mjs  check_t6_rules.mjs  demote_catalog_statuses.mjs  generate_verification_ledger.mjs  param_snap.mjs  parity-audit.cjs  parity_signals.mjs  qc-preview-lofiloofy.mjs
scripts/goldens/: ER.golden.json  SDN.golden.json  abs.golden.json  adsr.golden.json  allpass.golden.json  autopan.golden.json  bbdDelay.golden.json  bitcrush.golden.json  blackmerVCA.golden.json  blit.golden.json  bpm.golden.json  busSum.golden.json  chamberlinZeroCross.golden.json  chaos.golden.json  chebyshevWS.golden.json  chromagram.golden.json  clamp.golden.json  comb.golden.json  combine.golden.json  constant.golden.json  convolution.golden.json  correlation.golden.json  crackle.golden.json  crossfade.golden.json  crossfeed.golden.json  curve.golden.json  dcBlock.golden.json  delay.golden.json  detector.golden.json  diffuser.golden.json  diodeBridgeGR.golden.json  diodeClipper.golden.json  diodeLadder.golden.json  dither.golden.json  (+99 more)
src/: AirliftOrb.jsx  AmpOrb.jsx  AmplessOrb.jsx  AnalogGlueOrb.jsx  BassmindOrb.jsx  BrickZoomView.jsx  CharacterOrb.jsx  ClipMeter.jsx  DeHarshOrb.jsx  DistortionOrb.jsx  DriftOrb.jsx  DrumBusOrb.jsx  EchoformOrb.jsx  FinisherOrb.jsx  FlangerOrb.jsx  FocusReverbOrb.jsx  FreezeFieldOrb.jsx  GluesmashOrb.jsx  GravityOrb.jsx  Iron1073Orb.jsx  LA2AOrb.jsx  MixBusOrb.jsx  ModulationOrb.jsx  MorphReverbOrb.jsx  NastyNeveOrb.jsx  NearFarOrb.jsx  NeveOrb.jsx  OrbPluginDemo.jsx  OrbitOrb.jsx  PantherBussOrb.jsx  PhaserOrb.jsx  PhraseRiderOrb.jsx  PitchShifterOrb.jsx  PlateXOrb.jsx  PlayboxOrb.jsx  PresetSelector.jsx  ReactorOrb.jsx  ReverbBusOrb.jsx  ScopeOrb.jsx  ShagatronOrb.jsx  (+68 more)
src/sandbox/codegen/parity_host/: CMakeLists.txt
src/sandbox/codegen/parity_host/src/: main.cpp
(+857 files in other folders)
